--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav>
             <ul>
-                <li><a href="">Réservation</a></li>
-                <li><a href="">Menu</a></li>
-                <li><a href="">Horaire</a></li>
-                <li><a href="">Localisation</a></li>
+                <li><a href="section 1">Liens 1</a></li>
+                <li><a href="section 2">Liens 2</a></li>
+                <li><a href="section 3">Liens 3</a></li>
+                <li><a href="section 4">Liens 4</a></li>
             </ul>
+            <a id="haut" href="#header"><i class="fas fa-3x fa-angle-double-up"></i></a>
         </nav>
           <div>
-           <h1>Lorem ipsum dolor</h1>
+           <h1>DIAROUMA Dounaba</h1>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus fugit, quasi eaque beatae error doloribus possimus ad tempora, aspernatur itaque sequi ut totam cum nemo aliquid ipsam recusandae ea atque!</p>
        
           </div>
